<resources>
    <string name="app_name">Sudoku</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="password">Password</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="changePassword"><b>Change Password</b></string>
    <string name="helpTitle"><b>How to play Sudoku</b></string>
    <string name="help1"><b>Use Numbers 1-9</b>\n\nSudoku is played on a grid of 9 x 9 spaces. Within the rows and columns are 9 “squares” (made up of 3 x 3 spaces). Each row, column and square (9 spaces each) needs to be filled out with the numbers 1-9, without repeating any numbers within the row, column or square. Does it sound complicated? As you can see from the image below of an actual Sudoku grid, each Sudoku grid comes with a few spaces already filled in; the more spaces filled in, the easier the game – the more difficult Sudoku puzzles have very few spaces that are already filled in.\n\n<b>Don’t Repeat Any Numbers</b></string>
    <string name="help2">As you can see, in the upper left square (circled in blue), this square already has 7 out of the 9 spaces filled in. The only numbers missing from the square are 5 and 6. By seeing which numbers are missing from each square, row, or column, we can use process of elimination and deductive reasoning to decide which numbers need to go in each blank space.\n\nFor example, in the upper left square, we know we need to add a 5 and a 6 to be able to complete the square, but based on the neighboring rows and squares we cannot clearly deduce which number to add in which space. This means that we should ignore the upper left square for now, and try to fill in spaces in some other areas of the grid instead.\n\n<b>Don\u2019t Guess</b>\n\nSudoku is a game of logic and reasoning, so you shouldn\u2019t have to guess. If you don\u2019t know what number to put in a certain space, keep scanning the other areas of the grid until you seen an opportunity to place a number. But don\u2019t try to \u201Cforce\u201D anything \u2013 Sudoku rewards patience, insights, and recognition of patterns, not blind luck or guessing.\n\n<b>Use Process of Elimination</b>\n\nWhat do we mean by using \u201Cprocess of elimination\u201D to play Sudoku? Here is an example. In this Sudoku grid (shown below), the far left-hand vertical column (circled in Blue) is missing only a few numbers: 1, 5 and 6.\n\nOne way to figure out which numbers can go in each space is to use \u201Cprocess of elimination\u201D by checking to see which other numbers are already included within each square \u2013 since there can be no duplication of numbers 1-9 within each square (or row or column).</string>
    <string name="help3">"In this case, we can quickly notice that there are already number 1s in the top left and center left squares of the grid (with number 1s circled in red). This means that there is only one space remaining in the far left column where a 1 could possibly go \u2013 circled in green. This is how the process of elimination works in Sudoku \u2013 you find out which spaces are available, which numbers are missing \u2013 and then deduce, based on the position of those numbers within the grid, which numbers fit into each space.\n\nSudoku rules are relatively uncomplicated \u2013 but the game is infinitely varied, with millions of possible number combinations and a wide range of levels of difficulty. But it\u2019s all based on the simple principles of using numbers 1-9, filling in the blank spaces based on deductive reasoning, and never repeating any numbers within each square, row or column."</string>
    <string name="txtCredits">https://sudoku.com/how-to-play/sudoku-rules-for-complete-beginners/</string>
    <string name="aboutTitle"><b>About</b></string>
    <string name="highscore">High Scores</string>
    <string name="aboutContent">Sudoku Developer: \nMatthew Nguyen \nMartin Mao \nXinbei Shen \nMichael Ly</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="your_high_score">Your High Score :</string>
</resources>
