<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popupbg"
    tools:context=".Help">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helpTitle"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColor='@color/words'
                android:textSize="20dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/textViewHelp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColor='@color/words'/>
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp" />
            <TextView
                android:id="@+id/textViewHelp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help2"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColor='@color/words'/>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <TextView
                android:id="@+id/textViewHelp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help3"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="15dp"
                android:textColor='@color/words'/>
            <TextView
                android:id="@+id/textLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCredits"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="20dp"
                android:autoLink="web"
                android:textColor="#0000EE"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>