<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/popupbg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:text="@string/highscore"
        android:textColor='@color/words'
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:text="@string/your_high_score" />
        <Chronometer
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="23dp"
            android:textSize="15sp"
            android:id="@+id/yourHighScore" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#4D4C4C"
        android:layout_marginBottom="25dp"
        android:text="@string/leaderboard" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#D3D3D3" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/highScoreRecycler"
        tools:listitem="@layout/highscore_item"
        android:scrollbars="vertical" />


</LinearLayout>